[tool.poetry]
name = "popol"
version = "0.1.0"
description = "Third party packages for your FastAPI projects"
authors = ["aprilahijriyan <hijriyan23@gmail.com>"]
license = "MIT"
maintainers = ["aprilahijriyan <hijriyan23@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/aprilahijriyan/popol"
repository = "https://github.com/aprilahijriyan/popol"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
pydantic = {extras = ["email"], version = "^1.9.0"}
asyncer = "^0.0.1"
redis = {version = "^4.1.4", optional = true}
saq = {version = "^0.4.1", optional = true}
sqlmodel = {version = "^0.0.6", optional = true}
pyhumps = {version = "^3.5.3", optional = true}
aioredis = {version = "^2.0.1", optional = true}
aiosmtplib = {version = "^1.1.6", optional = true}

[tool.poetry.dev-dependencies]
ipython = "^8.1.1"
pre-commit = "^2.17.0"
black = "^22.1.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]

popol = "popol.__main__:popol"

[tool.poetry.plugins."popol.commands"]
saq = "popol.jobs.saq.cli:saq"

[tool.poetry.urls]

"Bug Tracker" = "https://github.com/aprilahijriyan/popol/issues"
