[tool.poetry]
name = "popol"
version = "0.4.0"
description = "Adding new power to your FastAPI application ⛅"
authors = ["aprilahijriyan <hijriyan23@gmail.com>"]
license = "MIT"
maintainers = ["aprilahijriyan <hijriyan23@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/aprilahijriyan/popol"
repository = "https://github.com/aprilahijriyan/popol"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
pydantic = {extras = ["email"], version = "^1.9.1"}
asyncer = "^0.0.1"
typer = "^0.6.1"
redis = {version = "^4.3.4", optional = true}
saq = {version = "^0.8.0", optional = true}
sqlmodel = {version = "^0.0.6", optional = true}
pyhumps = {version = "^3.7.2", optional = true}
aiosmtplib = {version = "^1.1.6", optional = true}

[tool.poetry.extras]

# units
sqlmodel = ["sqlmodel", "pyhumps"]
redis = ["redis"]
saq = ["saq"]
aiosmtplib = ["aiosmtplib"]

# bundles
cache = ["redis"]
background_jobs = ["saq"]
orm = ["sqlmodel", "pyhumps"]

# all
all = ["sqlmodel", "pyhumps", "redis", "saq", "aiosmtplib"]

[tool.poetry.dev-dependencies]
ipython = "^8.1.1"
pre-commit = "^2.17.0"
black = "^22.1.0"
pytest = "^7.0.1"
mkdocs-material = "^8.2.5"
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs-git-revision-date-localized-plugin = "^1.0.0"
mkdocstrings = "^0.18.1"
mkdocs-include-dir-to-nav = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]

popol = "popol.__main__:popol"

[tool.poetry.plugins."popol.commands"]
saq = "popol.jobs.saq.cli:saq"

[tool.poetry.urls]

"Bug Tracker" = "https://github.com/aprilahijriyan/popol/issues"
