[tool.poetry]
name = "popol"
version = "0.6.0"
description = "Adding new power to your FastAPI application ⛅"
authors = ["aprilahijriyan <hijriyan23@gmail.com>"]
license = "MIT"
maintainers = ["aprilahijriyan <hijriyan23@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/aprilahijriyan/popol"
repository = "https://github.com/aprilahijriyan/popol"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {version = "^0.110.2", optional = true}
uvicorn = {extras = ["standard"], version = "^0.29.0", optional = true}
pydantic = {extras = ["email"], version = "^2.7.0", optional = true}
asyncer = "^0.0.5"
typer = {version = "^0.12.3"}
redis = {version = "^4.3.4", optional = true}
saq = {version = "^0.12.5", optional = true}
sqlmodel = {version = "^0.0.16", optional = true}
pyhumps = {version = "^3.8.0", optional = true}
aiosmtplib = {version = "^3.0.1", optional = true}
pydantic-settings = {version = "^2.2.1", optional = true}

[tool.poetry.extras]

# units
sqlmodel = ["sqlmodel", "pyhumps"]
redis = ["redis"]
saq = ["saq"]
aiosmtplib = ["aiosmtplib"]

# bundles
cache = ["redis"]
background_jobs = ["saq"]
orm = ["sqlmodel", "pyhumps"]
fastapi = ["fastapi", "uvicorn", "pydantic", "pydantic-settings"]

# all
all = ["fastapi", "uvicorn", "pydantic", "pydantic-settings", "sqlmodel", "pyhumps", "redis", "saq", "aiosmtplib"]

[tool.poetry.dev-dependencies]
ipython = "^8.1.1"
pre-commit = "^2.17.0"
black = "^22.1.0"
pytest = "^7.0.1"
mkdocs-material = "^8.2.5"
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs-git-revision-date-localized-plugin = "^1.0.0"
mkdocstrings = "^0.18.1"
mkdocs-include-dir-to-nav = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]

popol = "popol.__main__:popol"

[tool.poetry.plugins."popol.commands"]
saq = "popol.jobs.saq.cli:saq"

[tool.poetry.urls]

"Bug Tracker" = "https://github.com/aprilahijriyan/popol/issues"
